fixed images on mobile view

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -37,18 +37,6 @@ header {
 #plusSign:hover {
   color: white;
   background-color: #F15A29;
-
-header{
-  padding-bottom: 200px;
-  background-image: url('/assets/logo.svg');
-  float:left
-}
-
-#heading{
-  padding-top:60px;
-  background-image: url('/assets/logo.svg'), url('/assets/header_bg.svg');
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 #content {
@@ -178,7 +166,7 @@ footer {
   content: url('/assets/instagram_orange.svg');
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 700px) {
 
   header{
       padding-bottom: 200px;
@@ -196,8 +184,10 @@ footer {
   #container {
     width: 700px;
     text-align: center;
-    padding-top: 10px;
+    padding-top: 25px;
+    padding-bottom: 75px;
     box-sizing: border-box;
+
   }
 
   footer {
@@ -205,7 +195,7 @@ footer {
   }
 }
 
-@media screen and (max-width: 500px){
+@media screen and (max-width: 450px){
   header{
     padding-bottom: 200px;
     background-image: url('/assets/logo.svg');
@@ -220,50 +210,52 @@ footer {
   }
 
   #container{
-    width: 400px;
+    width: 425px;
     text-align: center;
-    margin-left: 15px;
+    padding-top: 0px;
+    padding-bottom: 10px;
     box-sizing: border-box;
   }
 
   li {
-      /* text-align:center; */
-      padding:0px;
-      width: 50px;
-      margin:0;
-      display:block;
-      color: #797a7d;
-      text-decoration: none;
-      border-right: 1px solid #bbb;
+    /* text-align:center; */
+    padding:0px;
+    width: 75px;
+    margin:0;
+    display:block;
+    color: #797a7d;
+    text-decoration: none;
+    border-right: 1px solid #bbb;
   }
 
   .guide span {
-  display: none;
+    display: none;
   }
 
   li:last-child {
-      border-right: none;
+    border-right: none;
   }
 
-.posts {
-  background-color: white;
-  height: 435px;
-  width: 400px;
-  display: inline-block;
-  margin-left: 0px;
-  margin-bottom: 0px;
-  box-sizing: border-box;
-  overflow: hidden;
-  text-align: left;
-}
+  .posts {
+    background-color: white;
+    height: 435px;
+    width: 410px;
+    display: inline-block;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 0px;
+    box-sizing: border-box;
+    overflow: hidden;
+    text-align: left;
+  }
 
-.imageDivs {
-  height: 170px;
-  width: 275px;
-  box-sizing: border-box;
-  background-size: cover;
-  background-position: center;
-}
+  .imageDivs {
+    height: 270px;
+    width: 360px;
+    box-sizing: border-box;
+    background-size: cover;
+    background-position: center;
+  }
 
 
 /* .posts{
@@ -281,5 +273,4 @@ footer {
   footer{
     display: none;
   }
-
 }
